Création de l'interface de connexion

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,8 @@
 					<li><a href="mvc/categorieProduits">Produits par catégories (MVC)</a></li>
 					<li><a href="mvc/produits">Liste des produits (MVC)</a></li>					
 					<li><a href="mvc/produits/create">Edition des produits (MVC)</a></li>					
-					<li><a href="mvc/categorieEditor">Edition des catégories (validation par formulaire)</a></li>
+                                        <li><a href="mvc/categorieEditor">Edition des catégories (validation par formulaire)</a></li>                   
+                                        <li><a href="mvc/authentification"> Authentification </a> </li>
 				</ul>
 			</li>
 			<li>Exemples AJAX
