--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,8 @@
             <li>Application de e-commerce
                 <ul>               
                     <li><a href="mvc/authentification"> Acceder à l'application </a> </li>
-                    <li><a href="mvc/acceuil"> Acceuil </a> </li>
+                    <li><a href="mvc/acceuil"> Acceuil Client </a> </li>
+                    <li><a href="mvc/admin"> Acceuil Admin </a> </li>
                 </ul>
             </li>
 
